07-security/01-networkpolicies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: lab-app
spec:
  podSelector: {}
  policyTypes: ["Ingress","Egress"]
